potfit-0.7.0 (20140123)
+ add global scaling parameter (UNTESTED)
+ add tbeam interaction
+ remove WZERO and PARAB options
+ add modified tersoff potential
+ remove NEWSCALE option
+ remove NORESCALE option, rescaling is now no longer enabled by default
  enable it with the RESCALE option
+ bump copyright to 2014

potfit-0.6.0 (20130821)
+ merge MEAM implementation of Jeremy Nicklas (Ohio State University)
+ add Stillinger-Weber potential (option stiweb)
+ add Tersoff potential (option tersoff)
+ remove compatibility mode
+ update diagnostic messages and errors to be more clear
+ most of the helper scripts in the util directory have been rewritten in python

potfit-0.5.3 (20130625)
+ fix building in 32bit environments
+ support latest versions of icc and mkl
+ renamed cbb potential to kawamura

potfit-0.5.2 (20130301)
+ EAM potentials can now be used together with electrostatics (COULOMB or DIPOLE)
+ fixed bug in rescale for pot 4 (reported by Andreas Ruehl)
+ fixed bugs in functions.c (reported by Albert Iskandarov)
+ fixed bug with box of contributing particles

potfit-0.5.1 (20120913)
+ add support for writing LAMMPS potentials (EAM and ADP for now)
+ [BUG] fix invariant potentials, should be working correctly now
+ [BUG] fix recognition of elements with a single letter
+ add support for "box of contributing particles"
+ bump copyright to 2012
+ [BUG] fix MPI_Gatherv error
+ add support for ACML5

potfit-0.5 (20111216)
+ fix invariant chemical potentials
+ errors for short distances are now more clear
+ rms for forces is now calculated correctly
+ fix wrong element detection in config.c
+ new internal initialization method for analytic potential functions
+ don't move the binary if BIN_DIR is empty
+ validate parameters from parameter file after initialization
+ add auto_t feature for simann, enable with "anneal_temp auto"
+ the error sum is now calculated as w*d^2 and no longer as (w*d)^2
+ added the proper citations to most of the analytic potential functions