@@ -35,7 +35,6 @@
 #include "potential.h"
 #include "splines.h"
 #include "utils.h"
-#include "version.h"
 
 #define NPLOT 1000
 
@@ -511,7 +510,7 @@ void write_pot_table_imd(pot_table_t *pt, char *prefix)
   if (NULL == outfile)
     error(1, "Could not open file %s\n", filename);
 
-  fprintf(outfile, "# IMD potential file written by %s\n#\n", VERSION_INFO);
+  fprintf(outfile, "# IMD potential file written by %s\n#\n", POTFIT_VERSION);
 #ifdef STIWEB
   fprintf(outfile, "# This is a Stillinger-Weber potential. Compile IMD with the 'stiweb' option.\n#\n");
 #endif /* STIWEB */
@@ -1309,7 +1308,7 @@ void write_pot_table_lammps(pot_table_t *pt)
 
   /* write header data */
 #ifdef STIWEB
-  fprintf(outfile, "# Stillinger-Weber parameters fitted with %s\n", VERSION_INFO);
+  fprintf(outfile, "# Stillinger-Weber parameters fitted with %s\n", POTFIT_VERSION);
   fprintf(outfile, "# these entries are in LAMMPS \"metal\" units:\n");
   fprintf(outfile, "#   epsilon = eV; sigma = Angstroms\n");
   fprintf(outfile, "#   other quantities are unitless\n\n");
@@ -1319,7 +1318,7 @@ void write_pot_table_lammps(pot_table_t *pt)
 #endif /* STIWEB */
 #ifdef TERSOFF
 #ifndef TERSOFFMOD
-  fprintf(outfile, "# Tersoff parameters fitted with %s\n", VERSION_INFO);
+  fprintf(outfile, "# Tersoff parameters fitted with %s\n", POTFIT_VERSION);
   fprintf(outfile, "# these entries are in LAMMPS \"metal\" units:\n");
   fprintf(outfile, "#   A,B = eV; lambda1,2,3 = 1/Angstroms; R,D = Angstroms\n");
   fprintf(outfile, "#   other quantities are unitless\n\n");
@@ -1327,7 +1326,7 @@ void write_pot_table_lammps(pot_table_t *pt)
   fprintf(outfile, "#   element_1 element_2 element_3\n");
   fprintf(outfile, "#   m, gamma, lambda3, c, d, costheta0, n, beta, lambda2, B, R, D, lambda1, A\n\n");
 #else
-  fprintf(outfile, "# modified Tersoff parameters fitted with %s\n", VERSION_INFO);
+  fprintf(outfile, "# modified Tersoff parameters fitted with %s\n", POTFIT_VERSION);
   fprintf(outfile, "# these entries are in LAMMPS \"metal\" units:\n");
   fprintf(outfile, "#   A,B = eV; lambda1,2,3 = 1/Angstroms; R,D = Angstroms\n");
   fprintf(outfile, "#   other quantities are unitless\n\n");
@@ -1450,7 +1449,7 @@ void write_pot_table_lammps(pot_table_t *pt)
   /* write LAMMPS formated header */
   /* lines 1,2,3 = comments (ignored) */
   fprintf(outfile, "LAMMPS %s potential generated by potfit\n", interaction_name);
-  fprintf(outfile, "potfit version %s (%s, %s)\n", VERSION_INFO, __DATE__, __TIME__);
+  fprintf(outfile, "potfit version %s (%s, %s)\n", POTFIT_VERSION, __DATE__, __TIME__);
   fprintf(outfile, "-----\n");
   /* line 4: Nelements Element1 Element2 ... ElementN */
   fprintf(outfile, "%d", ntypes);
